--- a/index.html
+++ b/index.html
@@ -1,161 +1,44 @@
 ---
+layout: home
+title: Welcome
 permalink: /
 ---
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="{{ site.description }}">
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <link rel="icon" type="image/png" href="/assets/images/dove-flame-16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/assets/images/dove-flame-32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/assets/images/dove-flame-96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/assets/images/dove-flame-196.png" sizes="196x196">
-    <link rel="icon" type="image/png" href="/assets/images/dove-flame-512.png" sizes="512x512">
-    <link rel="stylesheet" href="{{ "css/front.css" | prepend: site.baseurl }}">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin' rel='stylesheet'
-        type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-</head>
-
-<body>
-    <div class="content">
-        <img src="/assets/images/background.jpg" id="fullscreen">
-
-        <img src="/assets/images/circle-dove-flame-512.png" id="avatar">
-
-        <h1>{{ site.name }}</h1>
-        <h3>{{ site.description }}</h3>
-
-        <section>
-            <h4>Where:</h4>
-            <p>Agnew Grange Hall, 1241 N Barr Rd, Port Angeles, WA 98362, USA <a
-                    href="https://goo.gl/maps/VYR1XRK8DLMMmAyR8">map</a></a></p>
-        </section>
-
-        <section>
-            <h4>When:</h4>
-            <ul>
-                <li>Sunday Morning: 10am</li>
-                <li>Sunday Evening: 6pm</li>
-            </ul>
-        </section>
-
-        <section  class="sociallinks">
-            <ul>
-            {% if site.github_username %}
-            <li><a class="fa fa-2x fa-github" href="https://github.com/{{ site.github_username }}"><span
-                        class="description">GitHub</span></a></li>
-            {% endif %}
-
-            {% if site.codepen_username %}
-            <li><a class="fa fa-2x fa-codepen" href="https://codepen.io/{{ site.codepen_username }}"><span
-                        class="description">CodePen</span></a></li>
-            {% endif %}
-
-            {% if site.facebook_username %}
-            <li><a class="fa fa-2x fa-facebook" href="https://facebook.com/{{ site.facebook_username }}"><span
-                        class="description">Facebook</span></a></li>
-            {% endif %}
-
-            {% if site.vk_username %}
-            <li><a class="fa fa-2x fa-vk" href="https://vk.com/{{ site.vk_username }}"><span
-                        class="description">ВКонтакте</span></a></li>
-            {% endif %}
-
-            {% if site.twitter_username %}
-            <li><a class="fa fa-2x fa-twitter" href="https://twitter.com/{{ site.twitter_username }}"><span
-                        class="description">Twitter</span></a></li>
-            {% endif %}
-
-            {% if site.google_plus_username %}
-            <li><a class="fa fa-2x fa-google-plus" href="https://plus.google.com/+{{ site.google_plus_username }}"><span
-                        class="description">Google +</span></a></li>
-            {% endif %}
-
-            {% if site.linkedin_username %}
-            <li><a class="fa fa-2x fa-linkedin" href="https://linkedin.com/in/{{ site.linkedin_username }}"><span
-                        class="description">LinkedIn</span></a></li>
-            {% endif %}
-
-            {% if site.vine_username %}
-            <li><a class="fa fa-2x fa-vine" href="https://vine.co/{{ site.vine_username }}"><span
-                        class="description">Vine</span></a></li>
-            {% endif %}
-
-            {% if site.instagram_username %}
-            <li><a class="fa fa-2x fa-instagram" href="https://instagram.com/{{ site.instagram_username }}"><span
-                        class="description">Instagram</span></a></li>
-            {% endif %}
-
-            {% if site.flickr_usernmae %}
-            <li><a class="fa fa-2x fa-flickr" href="https://flickr.com/photos/{{ site.flickr_username }}"><span
-                        class="description">Flickr</span></a></li>
-            {% endif %}
-
-            {% if site.steam_username %}
-            <li><a class="fa fa-2x fa-steam" href="http://steamcommunity.com/id/{{ site.steam_username }}"><span
-                        class="description">Steam</span></a></li>
-            {% endif %}
-
-            {% if site.soundcloud_username %}
-            <li><a class="fa fa-2x fa-soundcloud" href="https://soundcloud.com/{{ site.soundcloud_username }}"><span
-                        class="description">Soundcloud</span></a></li>
-            {% endif %}
-
-            {% if site.lastfm_username %}
-            <li><a class="fa fa-2x fa-lastfm" href="http://www.last.fm/user/{{ site.lastfm_username }}"><span
-                        class="description">Last.fm</span></a></li>
-            {% endif %}
-
-            {% if site.stack_of_username %}
-            <li><a class="fa fa-2x fa-stack-overflow"
-                    href="https://stackoverflow.com/users/{{ site.stack_of_username }}"><span class="description">Stack
-                        OF</span></a></li>
-            {% endif %}
-
-            {% if site.reddit_username %}
-            <li><a class="fa fa-2x fa-reddit" href="https://reddit.com/user/{{ site.reddit_username }}"><span
-                        class="description">Reddit</span></a></li>
-            {% endif %}
-
-            {% if site.medium_username %}
-            <li><a class="fa fa-2x fa-medium" href="https://medium.com/@{{ site.medium_username }}"><span
-                        class="description">Medium</span></a></li>
-            {% endif %}
-
-            {% if site.tumblr_username %}
-            <li><a class="fa fa-2x fa-tumblr" href="https://{{ site.tumblr_username }}.tumblr.com/"><span
-                        class="description">Tumblr</span></a></li>
-            {% endif %}
-
-            {% if site.weibo_username %}
-            <li><a class="fa fa-2x fa-weibo" href="https://weibo.com/{{ site.weibo_username }}"><span
-                        class="description">微博</span></a></li>
-            {% endif %}
-
-            {% if site.blog_url %}
-            <li><a class="fa fa-2x fa-tags" href="{{ site.baseurl }}{{ site.blog_url }}"><span
-                        class="description">Blog</span></a></li>
-            {% endif %}
-
-            {% if site.email %}
-            <li><a class="fa fa-2x fa-envelope" href="mailto:{{ site.email }}"><span
-                        class="description">Email</span></a></li>
-            {% endif %}
-
-            {% if site.public_key_url %}
-            <li><a class="fa fa-2x fa-key" href="{{ site.public_key_url }}"><span class="description">PGP Key</span></a>
-            </li>
-            {% endif %}
-        </ul>
-        </section>
+<article class="helvetica pb5">
+  <header class="vh-50 bg-light-pink dt w-100">
+    <div style="background:url(/assets/images/background.jpg) no-repeat center right;background-size: cover;" class="dtc v-btm cover ph3 ph4-m ph5-l">
+      <h1 class="f2 f-subheadline-l measure lh-title fw9 white">{{ site.name }}</h1>
+      <h2 class="f4 fw6 white">{{ site.description }}</h2>
     </div>
+  </header>
 
-</body>
+  <div class=" ma3 w-80-m w-50-l mr-auto-ns ml-auto-ns">
+    <div class="w-100 flex-ns">
+      <section class="w-100 w-50-ns mr0 mr2-ns pa2 ba b--black-50">
+        <h3 class="mt0">Sundays</h3>
 
-</html>
+        <h4>Where:</h4>
+        <p class="mh3">Agnew Grange Hall <a href="https://goo.gl/maps/VYR1XRK8DLMMmAyR8">map</a><br>1241 N Barr Rd<br>Port Angeles, WA 98362 </p>
+
+        <h4>When:</h4>
+        <div class="mh3 dt">
+          <div class="dt-row"><div class="dtc pr2">Sunday School</div><div class="dtc">10:00am</div></div>
+          <div class="dt-row"><div class="dtc pr2">Worship</div><div class="dtc">11:30am</div></div>
+          <div class="dt-row"><div class="dtc pr2">Evening</div><div class="dtc">6:00pm</div></div>
+        </div>
+      </section>
+      <section class="w-100 w-50-ns mt3 mt0-ns ml0 ml2-ns pa2 ba b--black-50">
+        <h3 class="mt0">Wednesdays</h3>
+
+        <h4>Where:</h4>
+        <p class="mh3">Ray's House</p>
+
+        <h4>When:</h4>
+        <div class="mh3 dt">
+          <div class="dt-row"><div class="dtc pr2">Evening</div><div class="dtc">7:00pm</div></div>
+        </div>
+      </section>
+    </div>
+  </div>
+
+</article>
+
