--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@ permalink: /
 
         <h4>When:</h4>
         <div class="mh3 dt">
-          <div class="dt-row"><div class="dtc pr2">Sunday School</div><div class="dtc">10:00am</div></div>
+          <div class="dt-row"><div class="dtc pr2">Sunday School for all ages</div><div class="dtc">10:00am</div></div>
           <div class="dt-row"><div class="dtc pr2">Worship</div><div class="dtc">11:30am</div></div>
-          <div class="dt-row"><div class="dtc pr2">Evening</div><div class="dtc">6:00pm</div></div>
+          <div class="dt-row"><div class="dtc pr2">Prayer Time</div><div class="dtc">12:30pm</div></div>
         </div>
       </section>
       <section class="w-100 w-50-ns mt3 mt0-ns ml0 ml2-ns pa2 ba b--black-50">
-        <h3 class="mt0">Wednesdays</h3>
+        <h3 class="mt0">Thursdays</h3>
 
         <h4>Where:</h4>
-        <p class="mh3">Ray's House</p>
+        <p class="mh3">Agnew Grange Hall <a href="https://goo.gl/maps/VYR1XRK8DLMMmAyR8">map</a><br>1241 N Barr Rd<br>Port Angeles, WA 98362 </p>
 
         <h4>When:</h4>
         <div class="mh3 dt">
-          <div class="dt-row"><div class="dtc pr2">Evening</div><div class="dtc">7:00pm</div></div>
+          <div class="dt-row"><div class="dtc pr2">Dinner and Bible Study</div><div class="dtc">6:30pm</div></div>
         </div>
       </section>
     </div>
