--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@ permalink: /
 <article class="helvetica pb5">
   <header class="vh-50 bg-light-pink dt w-100">
     <div style="background:url(/assets/images/background.jpg) no-repeat center right;background-size: cover;" class="dtc v-btm cover ph3 ph4-m ph5-l">
+      <div class="w-50-l w-100-m">
       <h1 class="f2 f-subheadline-l measure lh-title fw9 white">{{ site.name }}</h1>
       <h2 class="f4 fw6 white">{{ site.description }}</h2>
+      </div>
     </div>
   </header>
 
