first for public

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ permalink: /
 ---
 <article class="helvetica pb5">
   <header class="vh-50 bg-light-pink dt w-100">
-    <div style="background:url(/assets/images/background.jpg) no-repeat center right;background-size: cover;" class="dtc v-btm cover ph3 ph4-m ph5-l">
+    <div class="dtc v-btm cover ph3 ph4-m ph5-l">
       <div class="w-50-l w-100-m">
       <h1 class="f2 f-subheadline-l measure lh-title fw9 white">{{ site.name }}</h1>
       <h2 class="f4 fw6 white">{{ site.description }}</h2>
@@ -23,9 +23,9 @@ permalink: /
 
         <h4>When:</h4>
         <div class="mh3 dt">
-          <div class="dt-row"><div class="dtc pr2">Sunday School for all ages</div><div class="dtc">10:00am</div></div>
-          <div class="dt-row"><div class="dtc pr2">Worship</div><div class="dtc">11:30am</div></div>
-          <div class="dt-row"><div class="dtc pr2">Prayer Time</div><div class="dtc">12:30pm</div></div>
+          <div class="dt-row"><div class="dtc pr4">Sunday School for all ages</div><div class="dtc tr">9:45am</div></div>
+          <div class="dt-row"><div class="dtc pr4">Worship</div><div class="dtc tr">11:00am</div></div>
+          <div class="dt-row"><div class="dtc pr4">Prayer Time</div><div class="dtc tr">12:10pm</div></div>
         </div>
       </section>
       <section class="w-100 w-50-ns mt3 mt0-ns ml0 ml2-ns pa2 ba b--black-50">
@@ -36,8 +36,10 @@ permalink: /
 
         <h4>When:</h4>
         <div class="mh3 dt">
-          <div class="dt-row"><div class="dtc pr2">Dinner and Bible Study</div><div class="dtc">6:30pm</div></div>
+          <div class="dt-row"><div class="dtc pr4">Dinner and gather</div><div class="dtc tr">6:30pm</div></div>
+          <div class="dt-row"><div class="dtc pr4">Book of Joshua</div><div class="dtc tr">until 8:00pm</div></div>
         </div>
+
       </section>
     </div>
   </div>
