--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@ permalink: /
 
         <h4>When:</h4>
         <div class="mh3 dt">
-          <div class="dt-row"><div class="dtc pr4">Sunday School for all ages</div><div class="dtc tr">9:45am</div></div>
+          <div class="dt-row"><div class="dtc pr4">Sunday School (Letter to the Romans)</div><div class="dtc tr">9:45am</div></div>
           <div class="dt-row"><div class="dtc pr4">Worship</div><div class="dtc tr">11:00am</div></div>
-          <div class="dt-row"><div class="dtc pr4">Prayer Time</div><div class="dtc tr">12:10pm</div></div>
         </div>
       </section>
       <section class="w-100 w-50-ns mt3 mt0-ns ml0 ml2-ns pa2 ba b--black-50">
-        <h3 class="mt0">Thursdays</h3>
+        <h3 class="mt0">Wednesdays</h3>
 
         <h4>Where:</h4>
         <p class="mh3">Agnew Grange Hall <a href="https://goo.gl/maps/VYR1XRK8DLMMmAyR8">map</a><br>1241 N Barr Rd<br>Port Angeles, WA 98362 </p>
@@ -37,7 +36,7 @@ permalink: /
         <h4>When:</h4>
         <div class="mh3 dt">
           <div class="dt-row"><div class="dtc pr4">Dinner and gather</div><div class="dtc tr">6:30pm</div></div>
-          <div class="dt-row"><div class="dtc pr4">Book of Joshua</div><div class="dtc tr">until 8:00pm</div></div>
+          <div class="dt-row"><div class="dtc pr4">Book of James</div><div class="dtc tr">until 8:00pm</div></div>
         </div>
 
       </section>
