--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ permalink: /
 
         <h4>When:</h4>
         <div class="mh3 dt">
-          <div class="dt-row"><div class="dtc pr4">Dinner and gather</div><div class="dtc tr">6:30pm</div></div>
-          <div class="dt-row"><div class="dtc pr4">Book of James</div><div class="dtc tr">until 8:00pm</div></div>
+          <div class="dt-row"><div class="dtc pr4">Dinner and gather</div><div class="dtc tr">6:00pm</div></div>
+          <div class="dt-row"><div class="dtc pr4">Book of James</div><div class="dtc tr">begins 6:45pm</div></div>
         </div>
 
       </section>
