--- a/index.html
+++ b/index.html
@@ -3,45 +3,22 @@ layout: home
 title: Welcome
 permalink: /
 ---
-<article class="helvetica pb5">
-  <header class="vh-50 bg-light-pink dt w-100">
-    <div class="dtc v-btm cover ph3 ph4-m ph5-l">
-      <div class="w-50-l w-100-m">
-      <h1 class="f2 f-subheadline-l measure lh-title fw9 white">{{ site.name }}</h1>
-      <h2 class="f4 fw6 white">{{ site.description }}</h2>
-      </div>
+<article class="helvetica">
+  <header class="vh-50 dt w-100" style="background-color: #b0edc6; color: #73736b;">
+    <div class="dtc v-btm cover ph3 ph4-m ph5-l tc">
+      <img src="assets/images/logo only circle.png">
+      <h1 class="f2 f-subheadline-l measure questrial-regular tc">{{ site.name }}</h1>
+      <h2 class="f4 tc">{{ site.description }}</h2>
     </div>
   </header>
 
-  <div class=" ma3 w-80-m w-50-l mr-auto-ns ml-auto-ns">
-    <div class="w-100 flex-ns">
-      <section class="w-100 w-50-ns mr0 mr2-ns pa2 ba b--black-50">
-        <h3 class="mt0">Sundays</h3>
-
-        <h4>Where:</h4>
-        <p class="mh3">Agnew Grange Hall <a href="https://goo.gl/maps/VYR1XRK8DLMMmAyR8">map</a><br>1241 N Barr Rd<br>Port Angeles, WA 98362 </p>
-
-        <h4>When:</h4>
-        <div class="mh3 dt">
-          <div class="dt-row"><div class="dtc pr4">Sunday School (Letter to the Romans)</div><div class="dtc tr">9:45am</div></div>
-          <div class="dt-row"><div class="dtc pr4">Worship</div><div class="dtc tr">11:00am</div></div>
-        </div>
-      </section>
-      <section class="w-100 w-50-ns mt3 mt0-ns ml0 ml2-ns pa2 ba b--black-50">
-        <h3 class="mt0">Wednesdays</h3>
-
-        <h4>Where:</h4>
-        <p class="mh3">Agnew Grange Hall <a href="https://goo.gl/maps/VYR1XRK8DLMMmAyR8">map</a><br>1241 N Barr Rd<br>Port Angeles, WA 98362 </p>
-
-        <h4>When:</h4>
-        <div class="mh3 dt">
-          <div class="dt-row"><div class="dtc pr4">Dinner and gather</div><div class="dtc tr">6:00pm</div></div>
-          <div class="dt-row"><div class="dtc pr4">Book of James</div><div class="dtc tr">begins 6:45pm</div></div>
-        </div>
-
-      </section>
-    </div>
+  <div class="pt5 pb5 w-100 mr-auto-ns ml-auto-ns" style="background-color: white;">
+      <h3 class="f3 mt0 mb0 tc">We worship on Sunday mornings at 11 am.</h3>
   </div>
+  <div class="pt1 pb1 w-100 mr-auto-ns ml-auto-ns" style="background-color: #b0edc6; color: #73736b;">
+    <p class="mh3 tc">Agnew Grange Hall <a target="_blank" href="https://maps.app.goo.gl/QTBmWEzttu7UT6Ky9">map</a><br>1241 N Barr Rd<br>Port Angeles, WA 98362 </p>
 
+    <p class="mh3 tc">Adult Sunday School at 9:45am</p>
+  </div>
 </article>
 
