Added about us text
fix border

--- a/index.html
+++ b/index.html
@@ -20,5 +20,22 @@ permalink: /
 
     <p class="mh3 tc">Adult Sunday School at 9:45am</p>
   </div>
+  <div class="ph7-l ph5-m ph2 pv5 w-100 mr-auto-ns ml-auto-ns" style="background-color: white;">
+    <p class="fw7 mt0">Why is our congregation separate from all the other congregations in our area?</p>
+
+    <p>As a congregation we have tried to be primarily a people that want to follow our savior Jesus Christ in all things. We do not want to do things because it is “traditional” or because “this is how we have always done it.”</p>
+
+    <p class="fw7 mt4">So are you part of a denomination?</p>
+
+    <p>We are not part of a denomination. We want to be free to live under the authority of the Bible, God’s personal revelation of Himself. So we place a high value on reading, studying, and being changed by the Bible.</p>
+
+    <p class="fw7 mt4">How do we want to live?</p>
+
+    <p>We want to bear fruit of the Spirit as described in Galatians 5. We want to be people and a group of people who abide in Jesus and live lives marked by love, joy, peace, patience, kindness, goodness, faithfulness, gentleness, and self-control.</p>
+
+    <p class="fw7 mt4">What can you expect if you visit us on a Sunday?</p>
+
+    <p class="mb0">You can expect corporate prayer, corporate singing, preaching, and conversation. Beyond that we may not look like congregations you have been in before.</p>
+  </div>
 </article>
 
