Adjust some language in about section

--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@ permalink: /
       <h3 class="f3 mt0 mb0 tc">We worship on Sunday mornings at 11 am.</h3>
   </div>
   <div class="pt1 pb1 w-100 mr-auto-ns ml-auto-ns" style="background-color: #b0edc6; color: #73736b;">
-    <p class="mh3 tc">Agnew Grange Hall <a target="_blank" href="https://maps.app.goo.gl/QTBmWEzttu7UT6Ky9">map</a><br>1241 N Barr Rd<br>Port Angeles, WA 98362 </p>
+    <p class="mh3 tc">Agnew Friends Hall <a target="_blank" href="https://maps.app.goo.gl/QTBmWEzttu7UT6Ky9">map</a><br>1241 N Barr Rd<br>Port Angeles, WA 98362 </p>
+
+    <p class="mh3 tc">Recordings are available on our <a href="https://www.facebook.com/narrowwaychurchportangeles/" target="_blank">Facebook page.</a></p>
 
     <p class="mh3 tc">Adult Sunday School at 9:45am</p>
   </div>
   <div class="ph7-l ph5-m ph2 pv5 w-100 mr-auto-ns ml-auto-ns" style="background-color: white;">
     <p class="fw7 mt0">Why is our congregation separate from all the other congregations in our area?</p>
 
-    <p>As a congregation we have tried to be primarily a people that want to follow our savior Jesus Christ in all things. We do not want to do things because it is “traditional” or because “this is how we have always done it.”</p>
+    <p>As a congregation we have tried to be primarily a people that want to follow our savior Jesus Christ in all things. We do not want to do things because they are “traditional” or because “this is how we have always done it.”</p>
 
     <p class="fw7 mt4">So are you part of a denomination?</p>
 
@@ -33,9 +35,14 @@ permalink: /
 
     <p>We want to bear fruit of the Spirit as described in Galatians 5. We want to be people and a group of people who abide in Jesus and live lives marked by love, joy, peace, patience, kindness, goodness, faithfulness, gentleness, and self-control.</p>
 
-    <p class="fw7 mt4">What can you expect if you visit us on a Sunday?</p>
+    <p class="fw7 mt4">What can you expect if you visit us this Sunday?</p>
 
     <p class="mb0">You can expect corporate prayer, corporate singing, preaching, and conversation. Beyond that we may not look like congregations you have been in before.</p>
+
+    <p class="fw7 mt4">Who is your pastor?</p>
+
+    <p class="mb0">Matthew Denson is our pastor. You can reach him by email at matthew@densons.org.</p>
+
   </div>
 </article>
 
