Update links to recordings.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ permalink: /
   <div class="pt1 pb1 w-100 mr-auto-ns ml-auto-ns" style="background-color: #b0edc6; color: #73736b;">
     <p class="mh3 tc">Agnew Friends Hall <a target="_blank" href="https://maps.app.goo.gl/QTBmWEzttu7UT6Ky9">map</a><br>1241 N Barr Rd<br>Port Angeles, WA 98362 </p>
 
-    <p class="mh3 tc">Recordings are available on our <a href="https://www.facebook.com/narrowwaychurchportangeles/" target="_blank">Facebook page.</a></p>
+    <p class="mh3 tc">Recordings are available on our <a href="https://www.facebook.com/narrowwaychurchportangeles/" target="_blank">Facebook</a> page or <a href="https://www.youtube.com/@NarrowWayChurchAgnew" target="_blank">YouTube</a> or <a href="https://t.me/narrowwaychurch" target="_blank">Telegram</a> channels.</p>
 
     <p class="mh3 tc">Adult Sunday School at 9:45am</p>
   </div>
