--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 title: Welcome
 permalink: /
 ---
-<article class="helvetica">
+<article class="helvetica" style="max-width: 1000px; margin: 0 auto; padding: 0 70px;">
   <header class="vh-50 dt w-100" style="background-color: #b0edc6; color: #73736b;">
     <div class="dtc v-btm cover ph3 ph4-m ph5-l tc">
       <img src="assets/images/logo only circle.png">
@@ -22,7 +22,7 @@ permalink: /
 
     <p class="mh3 tc">Adult Sunday School at 9:45am</p>
   </div>
-  <div class="ph7-l ph5-m ph2 pv5 w-100 mr-auto-ns ml-auto-ns" style="background-color: white;">
+  <div class="pt1 pb1 w-100 mr-auto-ns ml-auto-ns">
     <p class="fw7 mt0">Why is our congregation separate from all the other congregations in our area?</p>
 
     <p>As a congregation we have tried to be primarily a people that want to follow our savior Jesus Christ in all things. We do not want to do things because they are “traditional” or because “this is how we have always done it.”</p>
